# haskell-onboarding

./: .envrc  .gitignore  .replit  README.md  README.org  cabal.project  default.nix  exercism_list.txt  flake.nix  gc.sh  ghci_wrapper.sh  hie.yaml  make_custom_nixpkgs.sh  replit.nix  run_exercism.sh  shell.nix
.config/direnv/: direnvrc
.config/doom/: config.el  default.nix  doom-private.org  init.el  packages.el
.config/emacs/.git_bak/: index  packed-refs
.config/nix_bak/: nix.conf
algorithm-design-with-haskell/: algorithm-design-with-haskell.cabal
algorithm-design-with-haskell/src/: Kata.hs
algorithm-design-with-haskell/src/Kata/: Ch1.hs  Ch1Ex.hs  Ch1ExAnswer.hs  Ch4.hs  Ch4Answer.hs
custom_path/.git_bak/: config  index
custom_path/.git_bak/hooks/: post-update.sample  pre-push.sample  push-to-checkout.sample  update.sample
custom_path/.git_bak/logs/: HEAD
doomemacs/.git_bak/: config  index  shallow
ex-from-fp-course/: ex-from-fp-course.cabal
ex-from-fp-course/src/: Applicative.hs  ApplicativeAnswer.hs  ExactlyOne.hs  Functor.hs  FunctorAnswer.hs  Kata.hs  List.hs  ListAnswer.hs
exercism/: get-exercises.sh
exercism/haskell/: .envrc  flake.nix  pkgs.nix
exercism/haskell/accumulate/: HELP.md  README.md  accumulate.cabal
exercism/haskell/acronym/: HELP.md  README.md  acronym.cabal
exercism/haskell/affine-cipher/: HELP.md  README.md  affine-cipher.cabal
exercism/haskell/all-your-base/: HELP.md  README.md  all-your-base.cabal
exercism/haskell/allergies/: HELP.md  README.md  allergies.cabal
exercism/haskell/alphametics/: HELP.md  README.md  alphametics.cabal
exercism/haskell/anagram/: HELP.md  README.md  anagram.cabal
exercism/haskell/armstrong-numbers/: HELP.md  README.md  armstrong-numbers.cabal
exercism/haskell/atbash-cipher/: HELP.md  README.md  atbash-cipher.cabal
exercism/haskell/bank-account/: HELP.md  README.md  bank-account.cabal
fp-course/: fp-course.cabal
fp-course/src/: Kata.hs
fp-course/src/Kata/: Applicative.hs  ApplicativeAnswer.hs  ApplicativeMyAnswer.hs  ExactlyOne.hs  ExprT.hs  Functor.hs  FunctorAnswer.hs  FunctorEx.hs  FunctorMyAnswer.hs  List.hs  ListAnswer.hs  ListMyAnswer.hs  Monad.hs  MonadAnswer.hs  MonadMyAnswer.hs  Parser.hs  StackVM.hs  State.hs  StateAnswer.hs  TypeClass.hs
learn-you-a-haskell/: LICENSE  learn-you-a-haskell-in-two-weeks.org  learn-you-a-haskell.cabal
learn-you-a-haskell/app/: first.hs  hello.hs  weird.hs
learn-you-a-haskell/src/: First.hs
nix/: exercism-project.nix  outputs.nix  project.nix  shell.nix
nixpkgs-replit/.git_bak/: config  index  packed-refs
nixpkgs/.git_bak/: FETCH_HEAD  shallow
(+315 files in other folders)
