cabal-version: 2.4
name: ex-from-fp-course
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Su-Won Park
maintainer: Su-Won Park
category: Public

common common
  build-depends:    base
                  , bytestring
  default-language: Haskell2010
  ghc-options:      -O2

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: List
                   Functor
                   Applicative
                   ExactlyOne
